--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,3 +10,14 @@ body {
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
 }
+
+.sticky__header {
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  box-shadow: 3px 3px -8px 2px #ddd;
+}
