--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,10 @@
   .text__para {
     @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
   }
+
+  .header {
+    @apply bg-gradient-to-r from-white to-indigo-200 h-[80px] leading-[100px];
+  }
 }
 
 @media only screen and(max-width: 1024px) {
