--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,3 +21,33 @@ body {
   z-index: 999;
   box-shadow: 3px 3px -8px 2px #ddd;
 }
+
+@media only screen and (max-width: 768px) {
+  .navigation {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background: #00000084;
+    display: none;
+  }
+
+  .menu {
+    width: 15rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    z-index: 200;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .show__menu {
+    display: block;
+  }
+}
